--- a/src/index.css
+++ b/src/index.css
@@ -4,9 +4,14 @@
   box-sizing: border-box;
 }
 
+html {
+  overflow-x: hidden;
+  width: 100%;
+}
+
 html, body, #root {
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   background: #1C1C1C;
   margin: 0;
   padding: 0;
